{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 24,
  "lineage": "dc3f813f-3434-b6e5-f8d3-12fc4710f236",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "codr_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.47.36.2",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-08T15:23:31.739-08:00",
            "id": "projects/spry-cortex-483721-q8/regions/northamerica-northeast1/addresses/codr-k8s-host-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "codr-k8s-host-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "spry-cortex-483721-q8",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/regions/northamerica-northeast1/addresses/codr-k8s-host-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-08T15:23:54.205-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-http-https",
            "log_config": [],
            "name": "codr-network-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
            "priority": 1000,
            "project": "spry-cortex-483721-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.codr_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-08T15:23:54.197-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-internal",
            "log_config": [],
            "name": "codr-network-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
            "priority": 1000,
            "project": "spry-cortex-483721-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.codr_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-08T15:23:54.163-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-k8s-api",
            "log_config": [],
            "name": "codr-network-allow-k8s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
            "priority": 1000,
            "project": "spry-cortex-483721-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-k8s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.codr_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nodeports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-08T15:23:54.161-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-nodeports",
            "log_config": [],
            "name": "codr-network-allow-nodeports",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
            "priority": 1000,
            "project": "spry-cortex-483721-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-nodeports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.codr_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-08T15:23:54.182-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-ssh",
            "log_config": [],
            "name": "codr-network-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
            "priority": 1000,
            "project": "spry-cortex-483721-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/firewalls/codr-network-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-enabled"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.codr_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "codr_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 32,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/zones/northamerica-northeast1-b/disks/codr-k8s-host"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/spry-cortex-483721-q8/zones/northamerica-northeast1-b/instances/codr-k8s-host",
            "instance_id": "8912669952512458826",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "6bxawB62B1U=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Update system\napt-get update \u0026\u0026 apt-get upgrade -y\n\n# Install required packages\napt-get install -y \\\n  apt-transport-https \\\n  ca-certificates \\\n  curl \\\n  gnupg \\\n  lsb-release \\\n  software-properties-common\n\n# Disable swap (required for Kubernetes)\nswapoff -a\nsed -i '/ swap / s/^/#/' /etc/fstab\n\n# Load required kernel modules\ncat \u003c\u003cEOT | tee /etc/modules-load.d/k8s.conf\noverlay\nbr_netf [...]
            "name": "codr-k8s-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.47.36.2",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/regions/northamerica-northeast1/subnetworks/codr-network-subnet",
                "subnetwork_project": "spry-cortex-483721-q8"
              }
            ],
            "project": "spry-cortex-483721-q8",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/zones/northamerica-northeast1-b/instances/codr-k8s-host",
            "service_account": [
              {
                "email": "codr-k8s-sa@spry-cortex-483721-q8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-master",
              "k8s-node",
              "ssh-enabled",
              "web-server"
            ],
            "tags_fingerprint": "DMRaMS0JcuE=",
            "zone": "northamerica-northeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.codr_ip",
            "google_compute_network.codr_network",
            "google_compute_subnetwork.codr_subnet",
            "google_project_service.compute",
            "google_project_service.container",
            "google_service_account.codr_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "codr_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/spry-cortex-483721-q8/global/networks/codr-network",
            "mtu": 0,
            "name": "codr-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1086149914587398810",
            "project": "spry-cortex-483721-q8",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "codr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-08T15:23:54.829-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/spry-cortex-483721-q8/regions/northamerica-northeast1/subnetworks/codr-network-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "codr-network-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/global/networks/codr-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "spry-cortex-483721-q8",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-cortex-483721-q8/regions/northamerica-northeast1/subnetworks/codr-network-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.codr_network",
            "google_project_service.compute"
          ]
        }
      ]
    }
  ]
}